# django-zarinpal-gateway

./: MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
django_zarinpal/: views.py  zarinpal.py
django_zarinpal_gateway/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  zarinpal.py
