[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-zarinpal-gateway"
version = "0.1.0"
description = "Reusable Django app for Zarinpal payment integration"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mehdi Ahmadi", email = "ahmadi.mehd2@gmail.com" }
]

dependencies = [
    "django>=5.0",
    "requests>=2.32",
]

[project.urls]
homepage = "https://github.com/M-mehdiAhmadi/django-zarinpal"
source = "https://github.com/M-mehdiAhmadi/django-zarinpal"
issues = "https://github.com/M-mehdiAhmadi/django-zarinpal/issues"
